--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4cd6362e-1afc-4bf0-b7fb-6c2b8d7cb81d.preview.emergentagent.com
 WDS_SOCKET_PORT=443
